config/ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: server.gdgdevparty.info
      http:
        paths:
          - path: /server
            backend:
              serviceName: server
              servicePort: 3000
          - path: /
            backend:
              serviceName: gui
              servicePort: 80
