config/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: server
spec:
  action: ALLOW
  selector:
    matchLabels:
      name: server
  rules:
    - from:
        - source:
            requestPrincipals: ["*"]
